<resources>
    <string name="app_name">Pacific Diagnosis Team</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="social_vue">SOCIAL-VUE</string>
    <string name="welcome">WELCOME</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="create_new_account">CREATE AN ACCOUNT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="conditions">By tapping \"Sign Up\" you agree\nto the terms &amp; conditions </string>
    <string name="create_an_acct">Create new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_failed_wrong_password_or_username">Sign in failed! Wrong password or username</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="market">Market</string>
    <string name="pdt">PDT</string>

    <string-array name="prof_list">
        <item>X-Ray</item>
        <item>MRI</item>
        <item>CATLAB</item>
        <item>Altrasound</item>
        <item>Injector</item>
        <item>Mamography</item>
        <item>C-ARM</item>
        <item>Fluorscopy</item>
        <item>CT</item>
        <item>Printer</item>
        <item>LAB</item>
        <item>Health Care</item>
        <item>Eye Care</item>
        <item>Saliva Test</item>
        <item>Skin Care</item>
    </string-array>
    <string name="title_activity_professional">ProfessionalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="dashboard">Dashboard</string>
    <string name="notification">Notification</string>
    <string name="pdt_team">PDT Team</string>
</resources>
