<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_dashboard"
        android:orderInCategory="1"
        android:title="Category" />

    <item
        android:id="@+id/marketFragment"
        android:icon="@drawable/ic_shopping"
        android:orderInCategory="2"
        android:title="@string/market" />

    <item
        android:id="@+id/feedsFragment"
        android:icon="@drawable/ic_feedback"
        android:orderInCategory="3"
        android:title="@string/feedback" />

    <item
        android:id="@+id/settingsFragment2"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="4"
        android:title="@string/settings" />

</menu>